--- a/public/home/css/comment.css
+++ b/public/home/css/comment.css
@@ -7,30 +7,31 @@
 }
 
 .comment-text {
-    font-size: 13px;
-    width: 250px
+    font-size: 15px;
+    width: 250px;
 }
 
 .fs-12 {
-    font-size: 12px
+    font-size: 12px;
+    color: rgb(228, 228, 8);
 }
 
 .shadow-none {
-    box-shadow: none
+    box-shadow: none;
 }
 
 .name {
-    color: #525252
+    color: #525252;
 }
 
 .cursor:hover {
-    color: blue
+    color: blue;
 }
 
 .cursor {
-    cursor: pointer
+    cursor: pointer;
 }
 
 .textarea {
-    resize: none
+    resize: none;
 }
