--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -1213,6 +1213,10 @@ ol {
     line-height: 39px;
     display: block;
 }
+.sidebar__item ul li a:hover{
+    color: #7fad39;
+    transition: 0.5s;
+}
 
 .sidebar__item .latest-product__text {
     position: relative;
@@ -1398,17 +1402,22 @@ ol {
 }
 
 .product__discount__item__pic .product__discount__percent {
-    height: 45px;
-    width: 45px;
+    height: 40px;
+    width: 48px;
     background: #dd2222;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     font-size: 14px;
     color: #ffffff;
-    line-height: 45px;
+    line-height: 40px;
     text-align: center;
     position: absolute;
-    left: 15px;
+    /* left: 15px; */
     top: 15px;
+    border-top-right-radius: 19px;
+    right: 15px;
+    border-bottom-right-radius: 19px;
+    border-top-left-radius: 19px;
+    border-top-right: 15px;
 }
 
 .product__item__pic__hover {
@@ -1530,6 +1539,7 @@ ol {
 
 .product__discount__item__text h5 a {
     color: #1c1c1c;
+    font-size: 16px;
 }
 
 .product__discount__item__text .product__item__price {
@@ -2087,7 +2097,11 @@ ol {
     font-weight: 700;
     width: 70px;
 }
-
+.blog__item__text .blog__btn:hover{
+    background-color: #7fad39;
+    color: white;
+    transition: 0.5s;
+}
 .shoping__cart__table table tbody tr td.shoping__cart__total {
     font-size: 14px;
     color: #1c1c1c;
@@ -2476,11 +2490,12 @@ ol {
 .blog__item__text .blog__btn {
     display: inline-block;
     font-size: 14px;
-    color: #1c1c1c;
-    text-transform: uppercase;
+    color: #585858;
+    /* text-transform: uppercase; */
+    font-weight: bold;
     letter-spacing: 1px;
     border: 1px solid #b2b2b2;
-    padding: 14px 20px 12px;
+    padding: 12px 20px 12px;
     border-radius: 25px;
 }
 
@@ -2512,7 +2527,7 @@ ol {
 -----------------------*/
 
 .blog__sidebar {
-    padding-top: 50px;
+    /* padding-top: 50px; */
 }
 
 .blog__sidebar__item {
